--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1075,6 +1075,11 @@ span.logo
 .db_table{
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
+}
+
+.db_table td{
+    overflow: hidden;
 }
 
 .db_table .column1{
